Render plus sign correctly in adoc
Signed-off-by: Abrar Rahman Protyasha <abrar.rahman98@gmail.com>

--- a/README.adoc
+++ b/README.adoc
@@ -6,7 +6,7 @@
 
 Unless otherwise specified:
 
-`g++ solution.cpp -Wall -Werror -std=c++20 -o solution && ./solution`
+`g{plus}{plus} solution.cpp -Wall -Werror -std=c{plus}{plus}20 -o solution && ./solution`
 
 ### Python sources
 
